force-app/main/default/objects/aft__Article_Feedback__c/aft__Article_Feedback__c.object-meta.xml
<CustomObject>
    <description>Captures Article Feedback from the Article Feed internally and via Communities when a specific hashtag is used.</description>
    <label>Article Feedback</label>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Article Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>