force-app/main/default/objects/aft__Article_Feedback__c/fields/aft__Article_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>aft__Article_Created_Date__c</fullName>
    <label>Article Created Date</label>
    <type>DateTime</type>
</CustomField>