force-app/main/default/objects/aft__Article_Feedback__c/fields/aft__Article_Title__c.field-meta.xml
<CustomField>
    <fullName>aft__Article_Title__c</fullName>
    <label>Article Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>