force-app/main/default/objects/aft__Article_Feedback__c/fields/aft__Community_Name__c.field-meta.xml
<CustomField>
    <fullName>aft__Community_Name__c</fullName>
    <label>Community Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>