force-app/main/default/objects/aft__Article_Feedback__c/fields/aft__Feedback_Status__c.field-meta.xml
<CustomField>
    <fullName>aft__Feedback_Status__c</fullName>
    <label>Feedback Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>