force-app/main/default/objects/aft__Article_Feedback__c/fields/aft__Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>aft__Internal_Notes__c</fullName>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>