force-app/main/default/objects/aft__Article_Feedback__c/fields/aft__Is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>aft__Is_Current_User__c</fullName>
    <formula>aft__Assigned_To__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User</label>
    <type>Checkbox</type>
</CustomField>