force-app/main/default/objects/aft__Article_Feedback__c/fields/aft__Parent_FeedItem__c.field-meta.xml
<CustomField>
    <fullName>aft__Parent_FeedItem__c</fullName>
    <label>Parent FeedItem</label>
    <length>18</length>
    <type>Text</type>
</CustomField>