force-app/main/default/objects/aft__Article_Feedback__c/listViews/aft__All.listView-meta.xml
<ListView>
    <fullName>aft__All</fullName>
    <columns>NAME</columns>
    <columns>aft__Feedback_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>aft__Assigned_To__c</columns>
    <columns>aft__Article_Number__c</columns>
    <columns>aft__Article_Title__c</columns>
    <columns>aft__Last_Published_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>