force-app/main/default/objects/aft__Article_Feedback__c/listViews/aft__Backlogged_Feedback.listView-meta.xml
<ListView>
    <fullName>aft__Backlogged_Feedback</fullName>
    <columns>NAME</columns>
    <columns>aft__Article_Number__c</columns>
    <columns>aft__Article_Title__c</columns>
    <columns>aft__Assigned_To__c</columns>
    <columns>aft__Feedback_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aft__Feedback_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>N_DAYS_AGO:7</value>
    </filters>
    <label>Backlogged Feedback</label>
</ListView>