force-app/main/default/objects/aft__Article_Feedback__c/listViews/aft__My_Feedback_All.listView-meta.xml
<ListView>
    <fullName>aft__My_Feedback_All</fullName>
    <columns>NAME</columns>
    <columns>aft__Article_Number__c</columns>
    <columns>aft__Article_Title__c</columns>
    <columns>aft__Assigned_To__c</columns>
    <columns>aft__Feedback_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aft__Is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Feedback - All</label>
</ListView>