force-app/main/default/objects/aft__Article_Feedback__c/listViews/aft__New_Feedback.listView-meta.xml
<ListView>
    <fullName>aft__New_Feedback</fullName>
    <columns>NAME</columns>
    <columns>aft__Article_Number__c</columns>
    <columns>aft__Article_Title__c</columns>
    <columns>aft__Assigned_To__c</columns>
    <columns>aft__Feedback_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aft__Feedback_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>aft__Assigned_To__c</field>
        <operation>equals</operation>
    </filters>
    <label>New Feedback</label>
</ListView>